[package]
name = "dstat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "tls"] }
reqwest = { version = "0.11.10", features = ["json", "native-tls"], default-features = false }

[profile.release]
codegen-units = 1
lto = true